--- a/index.html
+++ b/index.html
@@ -1,3 +1,183 @@
-<div class="run-entry"><a href="results/2025-01-23-16-14-31/">23 Jan 2025 16</a></div>
-<div class="run-entry"><a href="results/2025-01-23-16-03-49/">23 Jan 2025 16</a></div>
-<div class="run-entry"><a href="results/2025-01-23-15-35-43/">23 Jan 2025 15</a></div>
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset='UTF-8'>
+		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+		<title>Playwright Test Reports List</title>
+		<style>
+			body {
+				font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+				font-size: 14px;
+			}
+			.container {
+				width: 100%;
+				max-width: 800px;
+				margin: auto;
+				padding: 1rem;
+				display: flex;
+				flex-direction: column;
+				gap: 1em;
+			}
+			.report-row {
+				border: solid 1px #CCC;
+				border-radius: 0.5rem;
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+			}
+			.report-date {
+				padding: 0.5rem;
+				flex-grow: 1;
+			}
+			.report-stat {
+				padding: 0.5rem;
+				border-left: solid 1px #CCC;
+				font-weight: 600;
+				display: flex;
+				flex-direction: row;
+				gap: 1ex;
+				align-items: center;
+			}
+			.badge {
+				border-radius: 0.5em;
+				background: #CCC;
+				padding: 0.25rem;
+				padding-left: 1ex;
+				padding-right: 1ex;
+			}
+			.badge.flaky {
+				color: yellow;
+				background: #b9b923;
+			}
+			.badge.failed {
+				color: white;
+				background: red;
+			}
+			a {
+				color: inherit;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div class="container">
+			
+<div class="report-row">
+	<div class="report-date">
+			<a href="2025-01-27-19-41-45">Mon Jan 27 2025 19:36:06 GMT+0000 (Coordinated Universal Time)</a>
+	</div>
+	<div class="report-stat">
+		All 
+		<div class="badge">35</div>
+	</div>
+	<div class="report-stat">
+		Passed
+		<div class="badge">30</div>
+	</div>
+	<div class="report-stat">
+		Failed
+		<div class="badge failed">4</div>
+	</div>
+	<div class="report-stat">
+		Flaky
+		<div class="badge flaky">1</div>
+	</div>
+</div>
+
+
+<div class="report-row">
+	<div class="report-date">
+			<a href="2025-01-27-19-13-52">Mon Jan 27 2025 19:02:13 GMT+0000 (Coordinated Universal Time)</a>
+	</div>
+	<div class="report-stat">
+		All 
+		<div class="badge">35</div>
+	</div>
+	<div class="report-stat">
+		Passed
+		<div class="badge">33</div>
+	</div>
+	<div class="report-stat">
+		Failed
+		<div class="badge failed">2</div>
+	</div>
+	<div class="report-stat">
+		Flaky
+		<div class="badge ">0</div>
+	</div>
+</div>
+
+
+<div class="report-row">
+	<div class="report-date">
+			<a href="2025-01-27-20-32-50">Mon Jan 27 2025 16:21:25 GMT+0000 (Coordinated Universal Time)</a>
+	</div>
+	<div class="report-stat">
+		All 
+		<div class="badge">35</div>
+	</div>
+	<div class="report-stat">
+		Passed
+		<div class="badge">33</div>
+	</div>
+	<div class="report-stat">
+		Failed
+		<div class="badge failed">2</div>
+	</div>
+	<div class="report-stat">
+		Flaky
+		<div class="badge ">0</div>
+	</div>
+</div>
+
+
+<div class="report-row">
+	<div class="report-date">
+			<a href="2025-01-27-20-11-19">Mon Jan 27 2025 16:04:10 GMT+0000 (Coordinated Universal Time)</a>
+	</div>
+	<div class="report-stat">
+		All 
+		<div class="badge">35</div>
+	</div>
+	<div class="report-stat">
+		Passed
+		<div class="badge">33</div>
+	</div>
+	<div class="report-stat">
+		Failed
+		<div class="badge failed">1</div>
+	</div>
+	<div class="report-stat">
+		Flaky
+		<div class="badge flaky">1</div>
+	</div>
+</div>
+
+
+<div class="report-row">
+	<div class="report-date">
+			<a href="2025-01-27-16-01-19">Mon Jan 27 2025 15:49:49 GMT+0000 (Coordinated Universal Time)</a>
+	</div>
+	<div class="report-stat">
+		All 
+		<div class="badge">35</div>
+	</div>
+	<div class="report-stat">
+		Passed
+		<div class="badge">33</div>
+	</div>
+	<div class="report-stat">
+		Failed
+		<div class="badge failed">2</div>
+	</div>
+	<div class="report-stat">
+		Flaky
+		<div class="badge ">0</div>
+	</div>
+</div>
+
+		</div>
+	</body>
+
+</html>
